minor edits; repo needs a clean-up

--- a/kubinec_model_preprint.Rmd
+++ b/kubinec_model_preprint.Rmd
@@ -127,7 +127,7 @@ We also find evidence that in-person political activity is positively associated
 
 # Background
 
-As more and more data has become available on observed case counts of the SARS-CoV2 coronavirus, there have been increasing attempts to infer how contextual factors like government policies, partisanship, and temperature affect the disease's spread [@carleton2020; @sajadi2020; @dudel2020; @tansim2020; @brze2020]. The temptation to make inferences from the observed data, however, can result in misleading conclusions. Modeling approaches that fully account for disease dynamics like the SIR/SEIR specifications are very powerful but also require more information than is known about disease progression in the population--especially in its early stages--requiring researchers to rely on assumptions that are difficult to know with complete confidence [@flaxman2020; @ferguson2020]. For this reason, in this paper we present a retrospective Bayesian model that can adjust for testing bias by estimating the unobservable infection rate up to an unidentified constant. Furthermore, by incorporating informative priors based on serological and expert surveys of infection prevalence, it is possible to put an informative prior on the unobserved infection rate and estimate both recent disease trends and the effect of covariates on the historical spread of the disease. By employing a full Bayesian approach, we are able to allow our uncertainty about this prior information to propagate in the model, ensuring that we are not over-confident in our predictions of the latent infection rate.
+As more and more data has become available on observed case counts of the SARS-CoV2 coronavirus, there have been increasing attempts to infer how contextual factors like government policies, partisanship, and temperature affect the disease's spread [@carleton2020; @sajadi2020; @dudel2020; @tansim2020; @brze2020]. The temptation to make inferences from the observed data, however, can result in misleading conclusions. Modeling approaches that fully account for disease dynamics like the SIR/SEIR specifications are very powerful but also require more information than is known about disease progression in the population--especially in its early stages--requiring researchers to rely on assumptions that are difficult to know with complete confidence [@flaxman2020; @ferguson2020]. For this reason, in this paper we present a retrospective Bayesian model that can adjust for testing bias by estimating the unobservable infection rate up to an unidentified constant. Furthermore, by incorporating informative priors based on serological and expert surveys of infection prevalence, it is possible to put an informative prior on the unobserved infection rate and estimate both recent disease trends and the effect of covariates on the historical spread of the disease. By employing a fully Bayesian approach, we are able to allow our uncertainty about this prior information to propagate in the model, ensuring that we are not over-confident in our predictions of the latent infection rate.
 
 We can summarize the problem of modeling COVID-19 (and diseases more generally) in terms of two main challenges. The first is the challenge of modeling the spread of the disease given the limitations of testing and reported deaths, which could obfuscate the effect of any covariates with data reporting issues. Second, employing observational data requires nuanced comparisons to be made. To learn the effect of a stay-at-home order, for instance, we would want to compare two regions with similar demographic, social and political characteristics as these could be also influencing human behavior, masking the effect of the stay-at-home order. For example, regions with less political partisanship may be more likely to take prudent behaviors to mitigate COVID-19 and also may be more likely to see stay-at-home orders implemented.
 
@@ -198,8 +198,7 @@ We define the conditional distribution of the unobserved infection rate $I_{ct}$
 ```{=tex}
 \begin{align}
 \operatorname{Pr}(I_{ct} \mid t=T) &\sim \operatorname{Beta}(\mu \phi, (1 - \mu)\phi)\\
-        \mu = & g^{-1}(\alpha_1 + \\
-&\beta_{I1}t_o + \beta_{I2}t_o^2 + \beta_{I3}t_o^3 +
+        \mu = & g^{-1}(\alpha_1 + \beta_{I1}t_o + \beta_{I2}t_o^2 + \beta_{I3}t_o^3 +
                         \beta_C X_{ct})
   (\#eq:binom)
 \end{align}
@@ -2788,7 +2787,7 @@ p2 / p1 + plot_annotation(caption="Marginal effects calculated as a 1-standard d
 
 The use of mediation analysis shows substantial heterogeneity in the types of associations and whether direct and indirect effects tend to complement or substitute each other. First, it is important to note that the single strongest associations in panel B come from the YouGov mask-wearing poll, the Civiqs concern over coronavirus poll, count of protests, and the relative level of a state's cardiovascular disease. As these are cumulative average marginal effects, that number reflects what an *average* state might experience; the effect could well be larger for states with higher infection rates than average. On the other hand, as these effects are cumulative, they reflect a state that experienced a sustained increase in the covariates and so it might overstate the effects somewhat.
 
-On the whole, panel B would suggest that masking and concern over the coronavirus are leading indicators of infections given that these covariates were lagged by 14 days. In other words, people only changed their behavior once they believed that the pandemic was about to worsen, and indeed their presuppositions were correct. However, this pattern suggests that increased masking and fear of the virus were unable to prevent waves of infection from occurring. Sadly, these empirical associations correspond with what we know of the progression of the pandemic in the United States up until the arrival of effective vaccines.
+On the whole, panel B would suggest that masking and concern over the coronavirus are leading indicators of infections given that these covariates were lagged by 14 days. In other words, people only changed their behavior once they believed that the pandemic was about to worsen, and indeed their presuppositions were correct. However, this pattern suggests that increased masking and fear of the virus were unable to prevent waves of infection from occurring. Sadly, these empirical associations correspond with what we knew of the progression of the pandemic in the United States up until the arrival of effective vaccines.
 
 Mediation analysis is helpful at understanding what may be driving these associations. We can learn more about the meaning of the results when we can identify effects through pathways which we have a theoretical reason to believe matter for fighting the epidemic: individual concern over COVID-19 and individual mobility. The COVID poll's positive association with the spread of infections appears via mobility: as people become more concerned about the pandemic, their mobility patterns change, which is a leading indicator of the spread of the disease. However, again the positive association shows that these precautionary changes were not sufficient to prevent outbreaks. Likewise, masking has a positive association with disease, but only via an association with increased fear of the virus. Reported masking has a clear negative *direct* assocation, which we can reasonably infer to be the beneficial effect of wearing masks that can prevent infection from occuring. 
 
