--- a/BibTexDatabase.bib
+++ b/BibTexDatabase.bib
@@ -15057,13 +15057,15 @@ PMID: 32554604},
 }
 
 @article{flaxman2020a,
-	title = {Estimating the number of infections and the impact of non-pharmaceutical interventions on COVID-19 in 11 European countries},
-	author = {Seth Flaxman, Swapnil Mishra, Axel Gandy, H Juliette T Unwin, Helen Coupland, Thomas A Mellan, Harrison Zhu, Tresnia Berah, Jeffrey W Eaton, Pablo N P Guzman, Nora Schmit, Lucia Callizo, Kylie E C Ainslie, Marc Baguelin, Isobel Blake, Adhiratha Boonyasiri, Olivia Boyd, Lorenzo Cattarino, Constanze Ciavarella, Laura Cooper, Zulma Cucunuba, Gina Cuomo-Dannenburg, Amy Dighe, Bimandra Djaafara, Ilaria Dorigatti, Sabine van Elsland, Rich FitzJohn, Han Fu, Katy Gaythorpe, Lily Geidelberg, Nicholas Grassly, Will Green, Timothy Hallett, Arran Hamlet, Wes Hinsley, Ben Jeffrey, David Jorgensen, Edward Knock, Daniel Laydon, Gemma Nedjati-Gilani, Pierre Nouvellet, Kris Parag, Igor Siveroni, Hayley Thompson, Robert Verity, Erik Volz, Patrick GT Walker, Caroline Walters, Haowei Wang, Yuanrong Wang, Oliver Watson, Charles Whittaker, Peter Winskill, Xiaoyue Xi, Azra Ghani, Christl A. Donnelly, Steven Riley, Lucy C Okell, Michaela A C Vollmer, Neil M. Ferguson, Samir Bhatt},
-	year = {2020},
-	date = {2020},
-	journal = {Working Paper},
-	url = {https://www.imperial.ac.uk/mrc-global-infectious-disease-analysis/covid-19/report-13-europe-npi-impact/},
-	note = {Citation Key: flaxman2020}
+  title={Estimating the effects of non-pharmaceutical interventions on COVID-19 in Europe},
+  author={Flaxman, Seth and Mishra, Swapnil and Gandy, Axel and Unwin, H Juliette T and Mellan, Thomas A and Coupland, Helen and Whittaker, Charles and Zhu, Harrison and Berah, Tresnia and Eaton, Jeffrey W and others},
+  journal={Nature},
+  volume={584},
+  number={7820},
+  pages={257--261},
+  year={2020},
+  publisher={Nature Publishing Group},
+  note = {Citation Key: flaxman2020}
 }
 
 @article{larremore2020,
