upload latest presentation

--- a/BibTexDatabase.bib
+++ b/BibTexDatabase.bib
@@ -1,5 +1,25 @@
 % Encoding: UTF-8
 
+@article{kubinec_politically_2021a,
+	title = {Politically connected companies are less likely to shutdown due to {COVID}-19 restrictions},
+	volume = {102},
+	copyright = {© 2021 by the Southwestern Social Science Association},
+	issn = {1540-6237},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ssqu.13040},
+	doi = {10.1111/ssqu.13040},
+	abstract = {Objective While the aim of COVID-19 policies is to suppress the pandemic, many fear that the burden of the restrictions will fall more heavily on less privileged groups. We show one potential mechanism for COVID-19 responses to increase inequality by examining the intersection of business restrictions and business political connections. Methods We fielded an online survey of 2735 business employees and managers in Ukraine, Egypt, and Venezuela over the summer of 2020 to collect data on companies' closures due to COVID-19 and nuanced information about their political connections. Findings We show that businesses with political connections to government officials were significantly less likely to shut down as a result of COVID-19 policies. This finding suggests that measures designed to mitigate COVID-19 are ineffective in countries with a weak rule of law if politically connected firms are able to circumvent restrictions by leveraging political connections to receive preferential treatment. In addition, politically connected firms are no more likely—and sometimes even less likely—to engage in social-distancing policies to mitigate the pandemic despite the fact that they are more likely to remain open.},
+	language = {en},
+	number = {5},
+	urldate = {2023-12-26},
+	journal = {Social Science Quarterly},
+	author = {Kubinec, Robert and Lee, Haillie Na-Kyung and Tomashevskiy, Andrey},
+	year = {2021},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ssqu.13040},
+	keywords = {notion},
+	pages = {2155--2169},
+	file = {Full Text PDF:/Users/rmk7/Zotero/storage/WLC7QIZ6/Kubinec et al. - 2021 - Politically connected companies are less likely to.pdf:application/pdf},
+}
+
 @Conference{nguyen2015,
   author     = {Viet{-}An Nguyen and Jordan L. Boyd{-}Graber and Philip Resnik and Kristina Miler},
   title      = {Tea Party in the House: {A} Hierarchical Ideal Point Topic Model and Its Application to Republican Legislators in the 112th Congress},
@@ -15470,6 +15490,8 @@ PMID: 32554604},
 	title = {COVID AMP: An Open Access Database of COVID-19 Response Policies},
 	author = {Katz, Rebecca and Toole, Kate and Robertson, Hailey and Case, Alaina and Kerr, Justin and Robinson-Marshall, Siobhan and Schermerhorn, Jordan and Orsborn, Sarah and Maele, Michael Van and Zimmerman, Ryan and Stevens, Tess and Team, COVID AMP Coding and Phelan, Alexandra and Carlson, Colin and Graeden, Ellie},
 	doi = {10.1101/2023.05.01.23289163},
+	journal = {MedRxiv},
+	year = {2023},
 	langid = {en}
 }
 
@@ -15487,4 +15509,208 @@ PMID: 32554604},
 	url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1010485},
 	note = {Publisher: Public Library of Science},
 	langid = {en}
+}
+
+@book{gadarian2022,
+	title = {Pandemic politics: the deadly toll of partisanship in the age of COVID},
+	author = {Gadarian, Shana Kushner and Goodman, Sara Wallace and Pepinsky, Thomas B.},
+	year = {2022},
+	date = {2022},
+	publisher = {Princeton University Press}
+}
+
+@article{barceló2020,
+	title = {Voluntary adoption of social welfare-enhancing behavior: Mask-wearing in Spain during the COVID-19 outbreak},
+	author = {{Barceló}, Joan and Sheen, Greg Chih-Hsin},
+	year = {2020},
+	date = {2020},
+	journal = {PloS one},
+	pages = {e0242764},
+	volume = {15},
+	number = {12}
+}
+
+@article{moein2021,
+	title = {Inefficiency of SIR models in forecasting COVID-19 epidemic: a case study of Isfahan},
+	author = {Moein, Shiva and Nickaeen, Niloofar and Roointan, Amir and Borhani, Niloofar and Heidary, Zarifeh and Javanmard, Shaghayegh Haghjooy and Ghaisari, Jafar and Gheisari, Yousof},
+	year = {2021},
+	month = {02},
+	date = {2021-02-25},
+	journal = {Scientific Reports},
+	pages = {4725},
+	volume = {11},
+	number = {1},
+	doi = {10.1038/s41598-021-84055-6},
+	url = {https://www.nature.com/articles/s41598-021-84055-6},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@article{bertozzi2020,
+	title = {The challenges of modeling and forecasting the spread of COVID-19},
+	author = {Bertozzi, Andrea L. and Franco, Elisa and Mohler, George and Short, Martin B. and Sledge, Daniel},
+	year = {2020},
+	month = {07},
+	date = {2020-07-21},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {16732--16738},
+	volume = {117},
+	number = {29},
+	doi = {10.1073/pnas.2006520117},
+	url = {https://www.pnas.org/doi/10.1073/pnas.2006520117},
+	note = {Publisher: Proceedings of the National Academy of Sciences}
+}
+
+@article{kucharski2020,
+	title = {Early dynamics of transmission and control of COVID-19: a mathematical modelling study},
+	author = {Kucharski, Adam J. and Russell, Timothy W. and Diamond, Charlie and Liu, Yang and Edmunds, John and Funk, Sebastian and Eggo, Rosalind M. and Sun, Fiona and Jit, Mark and Munday, James D. and Davies, Nicholas and Gimma, Amy and Zandvoort, Kevin van and Gibbs, Hamish and Hellewell, Joel and Jarvis, Christopher I. and Clifford, Sam and Quilty, Billy J. and Bosse, Nikos I. and Abbott, Sam and Klepac, Petra and Flasche, Stefan},
+	year = {2020},
+	month = {05},
+	date = {2020-05-01},
+	journal = {The Lancet Infectious Diseases},
+	pages = {553--558},
+	volume = {20},
+	number = {5},
+	doi = {10.1016/S1473-3099(20)30144-4},
+	url = {https://www.thelancet.com/article/S1473-3099(20)30144-4/fulltext},
+	note = {Publisher: Elsevier
+PMID: 32171059},
+	langid = {English}
+}
+
+@article{mercer2021,
+	title = {Testing at scale during the COVID-19 pandemic},
+	author = {Mercer, Tim R. and Salit, Marc},
+	year = {2021},
+	month = {07},
+	date = {2021-07},
+	journal = {Nature Reviews Genetics},
+	pages = {415--426},
+	volume = {22},
+	number = {7},
+	doi = {10.1038/s41576-021-00360-w},
+	url = {https://www.nature.com/articles/s41576-021-00360-w},
+	note = {Number: 7
+Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@article{griffith2020,
+	title = {Collider bias undermines our understanding of COVID-19 disease risk and severity},
+	author = {Griffith, Gareth J. and Morris, Tim T. and Tudball, Matthew J. and Herbert, Annie and Mancano, Giulia and Pike, Lindsey and Sharp, Gemma C. and Sterne, Jonathan and Palmer, Tom M. and Davey Smith, George and Tilling, Kate and Zuccolo, Luisa and Davies, Neil M. and Hemani, Gibran},
+	year = {2020},
+	month = {11},
+	date = {2020-11-12},
+	journal = {Nature Communications},
+	pages = {5749},
+	volume = {11},
+	number = {1},
+	doi = {10.1038/s41467-020-19478-2},
+	url = {https://www.nature.com/articles/s41467-020-19478-2},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@article{saad-roy2023,
+	title = {Dynamics in a behavioral{\textendash}epidemiological model for individual adherence to a nonpharmaceutical intervention},
+	author = {Saad-Roy, Chadi M. and Traulsen, Arne},
+	year = {2023},
+	month = {10},
+	date = {2023-10-31},
+	journal = {Proceedings of the National Academy of Sciences},
+	pages = {e2311584120},
+	volume = {120},
+	number = {44},
+	doi = {10.1073/pnas.2311584120},
+	url = {https://www.pnas.org/doi/abs/10.1073/pnas.2311584120},
+	note = {Publisher: Proceedings of the National Academy of Sciences}
+}
+
+@article{valentine2020,
+	title = {Relationship of George Floyd protests to increases in COVID-19 cases using event study methodology},
+	author = {Valentine, Randall and Valentine, Dawn and Valentine, Jimmie L},
+	year = {2020},
+	month = {11},
+	date = {2020-11-23},
+	journal = {Journal of Public Health},
+	pages = {696--697},
+	volume = {42},
+	number = {4},
+	doi = {10.1093/pubmed/fdaa127},
+	url = {https://doi.org/10.1093/pubmed/fdaa127}
+}
+
+@article{neyman2020,
+	title = {Black Lives Matter protests and COVID-19 cases: relationship in two databases},
+	author = {Neyman, Gregory and Dalsey, William},
+	year = {2020},
+	month = {11},
+	date = {2020-11-20},
+	journal = {Journal of Public Health (Oxford, England)},
+	pages = {fdaa212},
+	doi = {10.1093/pubmed/fdaa212},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7717330/},
+	note = {PMID: 33215199
+PMCID: PMC7717330}
+}
+
+@article{dave,
+	title = {Black Lives Matter Protests and Risk Avoidance: The Case of Civil Unrest During a Pandemic},
+	author = {Dave, Dhaval M. and Friedson, Andrew I. and Matsuzawa, Kyutaro and Sabia, Joseph J. and Safford, Samuel},
+	doi = {10.3386/w27408},
+	year={2020}
+}
+
+@article{bui2021,
+	title = {Public Protests and the Risk of Novel Coronavirus Disease Hospitalizations: A County-Level Analysis from California},
+	author = {Bui, Linh N. and Berkowitz, Rachel L. and Jilek, Wendy and Bordner, Andrew J. and Azar, Kristen M. J. and Pressman, Alice and Romanelli, Robert J.},
+	year = {2021},
+	month = {01},
+	date = {2021-01},
+	journal = {International Journal of Environmental Research and Public Health},
+	pages = {9481},
+	volume = {18},
+	number = {18},
+	doi = {10.3390/ijerph18189481},
+	url = {https://www.mdpi.com/1660-4601/18/18/9481},
+	note = {Number: 18
+Publisher: Multidisciplinary Digital Publishing Institute},
+	langid = {en}
+}
+
+@article{quigley2023,
+	title = {Estimated Mask Use and Temporal Relationship to COVID-19 Epidemiology of Black Lives Matter Protests in 12 Cities},
+	author = {Quigley, Ashley and Nguyen, Phi Yen and Stone, Haley and Heslop, David J. and Chughtai, Abrar Ahmad and MacIntyre, C. Raina},
+	year = {2023},
+	month = {06},
+	date = {2023-06-01},
+	journal = {Journal of Racial and Ethnic Health Disparities},
+	pages = {1212--1223},
+	volume = {10},
+	number = {3},
+	doi = {10.1007/s40615-022-01308-4},
+	url = {https://doi.org/10.1007/s40615-022-01308-4},
+	langid = {en}
+}
+
+@article{hong,
+year={2023},
+	title = {Assessing the epidemic impact of protests during the COVID-19 pandemic},
+	author = {Hong, Inho and Ferreira, Leonardo N. and Rutherford, Alex and Cebrian, Manuel},
+	doi = {10.1101/2022.10.10.22280896},
+	langid = {en}
+}
+
+@article{kubinec2021,
+	title = {Statistically Validated Indices for COVID-19 Public Health Policies},
+	author = {Kubinec, Robert and {Barceló}, Joan and Goldszmidt, Rafael and Grujic, Vanja and Model, Timothy and Schenk, Caress and Cheng, Cindy and Hale, Thomas and Hartnett, Allison Spencer and Messerschmidt, Luca and Petherick, Anna and Thorvaldsdottir, Svanhildur},
+	year = {2021},
+	month = {04},
+	date = {2021-04-29},
+	doi = {10.31235/osf.io/rn9xk},
+	url = {https://osf.io/preprints/socarxiv/rn9xk/},
+	note = {DOI: 10.31235/osf.io/rn9xk
+type: article}
 }
